[gd_scene load_steps=3 format=2]

[ext_resource path="res://recording_booth.gd" type="Script" id=1]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="recording_booth" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="mic_input" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="audio_player" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="cc" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="p" type="PanelContainer" parent="cc"]
margin_left = 405.0
margin_top = 211.0
margin_right = 619.0
margin_bottom = 389.0

[node name="v_b" type="VBoxContainer" parent="cc/p"]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 171.0
custom_constants/separation = 25

[node name="record_button" type="Button" parent="cc/p/v_b"]
unique_name_in_owner = true
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Record"

[node name="play_button" type="Button" parent="cc/p/v_b"]
unique_name_in_owner = true
margin_top = 75.0
margin_right = 200.0
margin_bottom = 125.0
rect_min_size = Vector2( 200, 50 )
text = "Play recording"

[node name="status" type="Label" parent="cc/p/v_b"]
unique_name_in_owner = true
margin_top = 150.0
margin_right = 200.0
margin_bottom = 164.0
rect_min_size = Vector2( 200, 0 )
text = "Idle"
align = 1
valign = 1
